content(web): markup content
Create the introduction section.
Added skills section with items.
Added projects section.

--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,159 @@
 
     <!-- my intro page -->
 
-    <div></div>
+    <section id="biography">
+      <div class="biography-intro-text">
+        <p>Hi, I'm Katherine!</p>
+        <h1>Front End <br />Developer</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium
+          sapiente porro aut fugit ipsam harum, nobis, culpa mollitia esse natus
+          saepe, dicta dolorem tenetur laudantium animi officiis iusto facilis
+          quisquam?
+        </p>
+      </div>
+      <div class="biography-banner">
+        <img src="images/intro.png" alt="" />
+      </div>
+    </section>
+
+    <!-- skills section  -->
+
+    <section id="skills">
+      <div class="skills-subtitle">
+        <h2>My skills</h2>
+      </div>
+      <div class="skills-item-and-text">
+        <div class="skills-item">
+          <img src="images/skills/html.png" />
+          <p>HTML5</p>
+        </div>
+        <div class="skills-item">
+          <img src="images/skills/css.png" />
+          <p>CSS3</p>
+        </div>
+        <div class="skills-item">
+          <img src="images/skills/javascript-logo-1.png" />
+          <p>JavaScript</p>
+        </div>
+        <div class="skills-item">
+          <img src="images/skills/boostrap.png" />
+          <p>boostrap</p>
+        </div>
+        <div class="skills-item">
+          <img src="images/skills/linux.png" />
+          <p>Linux</p>
+        </div>
+        <div class="skills-item">
+          <img src="images/skills/git-icon.png" />
+          <p>Git</p>
+        </div>
+        <div class="skills-item">
+          <img src="images/skills/invision-logo.png" />
+          <p>Invision</p>
+        </div>
+        <div class="skills-item">
+          <img src="images/skills/rd.jpg" />
+          <p>
+            Responsive<br />
+            Design
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- projects section  -->
+
+    <section id="my-projects">
+      <div class="projects-subtitle">
+        <h2>My Projects</h2>
+      </div>
+
+      <div class="project">
+        <div class="project-thumbnail">
+          <img
+            src="https://xenforo.com/community/media/home-cat.604/full?d=1431690649"
+          />
+        </div>
+        <div class="project-description">
+          <h3>Lorem</h3>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi
+            ipsa assumenda numquam minima nemo voluptate rem.
+            <br />Exercitationem ut a porro, modi adipisci unde earum quo animi
+            explicabo error corrupti natus.
+          </p>
+          <a href="#"
+            >Learn more
+            <i class="fa-solid fa-arrow-right-long"></i>
+          </a>
+        </div>
+      </div>
+      <div class="project">
+        <div class="project-description">
+          <h3>Lorem</h3>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi
+            ipsa assumenda numquam minima nemo voluptate rem.
+            <br />Exercitationem ut a porro, modi adipisci unde earum quo animi
+            explicabo error corrupti natus.
+          </p>
+          <a href="#"
+            >Learn more
+            <i class="fa-solid fa-arrow-right-long"></i>
+          </a>
+        </div>
+        <div class="project-thumbnail">
+          <img
+            src="https://xenforo.com/community/media/home-cat.604/full?d=1431690649"
+          />
+        </div>
+      </div>
+      <div class="project">
+        <div class="project-thumbnail">
+          <img
+            src="https://xenforo.com/community/media/home-cat.604/full?d=1431690649"
+          />
+        </div>
+        <div class="project-description">
+          <h3>Lorem</h3>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi
+            ipsa assumenda numquam minima nemo voluptate rem.
+            <br />Exercitationem ut a porro, modi adipisci unde earum quo animi
+            explicabo error corrupti natus.
+          </p>
+          <a href="#"
+            >Learn more
+            <i class="fa-solid fa-arrow-right-long"></i>
+          </a>
+        </div>
+      </div>
+    </section>
+
+    <!-- experience  -->
+
+    <section id="experience">
+      <div class="experience-subtitle">
+        <h2>My experience</h2>
+      </div>
+
+      <div class="experience-item">
+        <div class="experience-company-logo">
+          <img src="images/knoledgize.png" />
+        </div>
+        <div class="experience-company-info">
+          <h3>Internship at Knowledgize</h3>
+          <p>12 jan to 19 july</p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi id
+            quae ut. Laborum, unde, voluptate rem enim blanditiis cumque eum
+            iste molestias facere expedita omnis ullam nostrum culpa doloremque
+            assumenda!
+          </p>
+        </div>
+      </div>
+    </section>
 
     <script src="main.js"></script>
   </body>
