content(web): markup footer

--- a/portfolio.html
+++ b/portfolio.html
@@ -189,6 +189,7 @@
         <div class="experience-company-logo">
           <img src="images/knoledgize.png" />
         </div>
+
         <div class="experience-company-info">
           <h3>Internship at Knowledgize</h3>
           <p>12 jan to 19 july</p>
@@ -201,6 +202,17 @@
         </div>
       </div>
     </section>
+
+    <footer>
+      <div>
+        <a href="#"><i class="fa-brands fa-github"></i></a>
+        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="#"><i class="fa-solid fa-envelope"></i></a>
+      </div>
+      <div>
+        <p>&copy Handcrafted by Katherine Negrete 2022</p>
+      </div>
+    </footer>
 
     <script src="main.js"></script>
   </body>
