style(web): style navegation bar
Add color and background colors.

--- a/portfolio.html
+++ b/portfolio.html
@@ -21,9 +21,15 @@
       </div>
       <div class="navigation-bar-links">
         <ul>
-          <li>Skills</li>
-          <li>Projects</li>
-          <li>Experience</li>
+          <li>
+            <a href="#">Skills</a>
+          </li>
+          <li>
+            <a href="#">Projects</a>
+          </li>
+          <li>
+            <a href="#">Experience</a>
+          </li>
           <li>
             <a
               class="contact-buttom"
@@ -33,12 +39,12 @@
             >
           </li>
           <li>
-            <a>
+            <a href="#">
               <i class="fa-brands fa-github"></i>
             </a>
           </li>
           <li>
-            <a>
+            <a href="#">
               <i class="fa-brands fa-linkedin"></i>
             </a>
           </li>
@@ -69,6 +75,12 @@
     <section id="skills">
       <div class="skills-subtitle">
         <h2>My skills</h2>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident
+          nihil odio maiores dignissimos tempore modi commodi dolores iusto, est
+          consequuntur minima consectetur ducimus nisi. Obcaecati cumque sequi
+          similique hic optio.
+        </p>
       </div>
       <div class="skills-item-and-text">
         <div class="skills-item">
