style(web): add colors
Add color in the buttom and icons.

--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,9 @@
           saepe, dicta dolorem tenetur laudantium animi officiis iusto facilis
           quisquam?
         </p>
+        <button class="dowloand-cv">Dowloand CV</button>
       </div>
+
       <div class="biography-banner">
         <img src="images/intro.png" alt="" />
       </div>
