style(web): style skills section
Change the position of elements on skills section.

--- a/portfolio.html
+++ b/portfolio.html
@@ -84,36 +84,36 @@
           similique hic optio.
         </p>
       </div>
-      <div class="skills-item-and-text">
-        <div class="skills-item">
+      <div class="skills-items">
+        <div class="item">
           <img src="images/skills/html.png" />
           <p>HTML5</p>
         </div>
-        <div class="skills-item">
+        <div class="item">
           <img src="images/skills/css.png" />
           <p>CSS3</p>
         </div>
-        <div class="skills-item">
+        <div class="item">
           <img src="images/skills/javascript-logo-1.png" />
           <p>JavaScript</p>
         </div>
-        <div class="skills-item">
+        <div class="item">
           <img src="images/skills/boostrap.png" />
           <p>boostrap</p>
         </div>
-        <div class="skills-item">
+        <div class="item">
           <img src="images/skills/linux.png" />
           <p>Linux</p>
         </div>
-        <div class="skills-item">
+        <div class="item">
           <img src="images/skills/git-icon.png" />
           <p>Git</p>
         </div>
-        <div class="skills-item">
+        <div class="item">
           <img src="images/skills/invision-logo.png" />
           <p>Invision</p>
         </div>
-        <div class="skills-item">
+        <div class="item">
           <img src="images/skills/rd.jpg" />
           <p>
             Responsive<br />
