style(web): style my projects section
    Change the position of elements on my projects section.

--- a/portfolio.html
+++ b/portfolio.html
@@ -124,70 +124,57 @@
     </section>
 
     <!-- projects section  -->
-
-    <section id="my-projects">
+    <div class="projects-section">
       <div class="projects-subtitle">
         <h2>My Projects</h2>
       </div>
+    </div>
 
+    <section id="my-projects">
       <div class="project">
         <div class="project-thumbnail">
           <img
-            src="https://xenforo.com/community/media/home-cat.604/full?d=1431690649"
+            src="https://media.istockphoto.com/photos/group-of-orange-slice-in-pink-colorfruit-and-summer-concept-picture-id958522470?b=1&k=20&m=958522470&s=170667a&w=0&h=_7b_qlObxXjXaslCTHi3-Kh_63OEskD5dk0qPl5VPc4="
           />
         </div>
         <div class="project-description">
           <h3>Lorem</h3>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi
-            ipsa assumenda numquam minima nemo voluptate rem.
-            <br />Exercitationem ut a porro, modi adipisci unde earum quo animi
-            explicabo error corrupti natus.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem
+            facilis praesentium neque exercitationem at, fugit consectetur
+            cumque autem vitae maiores? Quas illo cumque eum fugiat doloribus
+            quisquam ducimus qui natus.
           </p>
-          <a href="#"
-            >Learn more
-            <i class="fa-solid fa-arrow-right-long"></i>
-          </a>
-        </div>
-      </div>
-      <div class="project">
-        <div class="project-description">
-          <h3>Lorem</h3>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi
-            ipsa assumenda numquam minima nemo voluptate rem.
-            <br />Exercitationem ut a porro, modi adipisci unde earum quo animi
-            explicabo error corrupti natus.
-          </p>
-          <a href="#"
-            >Learn more
-            <i class="fa-solid fa-arrow-right-long"></i>
-          </a>
-        </div>
-        <div class="project-thumbnail">
-          <img
-            src="https://xenforo.com/community/media/home-cat.604/full?d=1431690649"
-          />
         </div>
       </div>
       <div class="project">
         <div class="project-thumbnail">
           <img
-            src="https://xenforo.com/community/media/home-cat.604/full?d=1431690649"
+            src="https://img.freepik.com/vector-gratis/fondo-transparente-platano-ilustracion-vector-comida-linda_53876-144616.jpg"
           />
         </div>
         <div class="project-description">
           <h3>Lorem</h3>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi
-            ipsa assumenda numquam minima nemo voluptate rem.
-            <br />Exercitationem ut a porro, modi adipisci unde earum quo animi
-            explicabo error corrupti natus.
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi
+            quidem quisquam iusto quam pariatur molestias quo minus blanditiis
+            et reiciendis sequi facilis repellendus iure animi minima, sunt,
+            beatae illum eaque!
           </p>
-          <a href="#"
-            >Learn more
-            <i class="fa-solid fa-arrow-right-long"></i>
-          </a>
+        </div>
+      </div>
+      <div class="project">
+        <div class="project-thumbnail">
+          <img src="https://cdn130.picsart.com/316366343082201.jpg" />
+        </div>
+        <div class="project-description">
+          <h3>Lorem</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi
+            obcaecati beatae exercitationem. Architecto repellendus aperiam
+            voluptas ullam odit incidunt qui quos! Quaerat, molestiae cumque.
+            Quos neque animi nisi a autem!
+          </p>
         </div>
       </div>
     </section>
@@ -221,7 +208,7 @@
       <div>
         <a href="#"><i class="fa-brands fa-github"></i></a>
         <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-        <a href="#"><i class="fa-solid fa-envelope"></i></a>
+        <a href="#"><i class="fa-solid fa-envelope-circle-check"></i></a>
       </div>
       <div>
         <p>&copy Handcrafted by Katherine Negrete 2022</p>
