style(web): style my biography intro
 Change the position of elements on my biography section.

--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,7 @@
       </div>
 
       <div class="biography-banner">
-        <img src="images/intro.png" alt="" />
+        <img src="images/myPhoto.png" alt="" />
       </div>
     </section>
 
