style(web): update my biography and sections
Add image for biography banner.
Add buttons and color on my projects seccion.

--- a/portfolio.html
+++ b/portfolio.html
@@ -16,9 +16,6 @@
     <!-- my nav  -->
 
     <nav class="navigation-bar">
-      <div class="navigation-bar-avatar">
-        <img class="avatar" src="images/my-photo.jpeg" alt="" />
-      </div>
       <div class="navigation-bar-links">
         <ul>
           <li>
@@ -68,7 +65,7 @@
       </div>
 
       <div class="biography-banner">
-        <img src="images/myPhoto.png" alt="" />
+        <img src="images/myPortfolio.png" alt="" />
       </div>
     </section>
 
@@ -124,57 +121,73 @@
     </section>
 
     <!-- projects section  -->
-    <div class="projects-section">
-      <div class="projects-subtitle">
-        <h2>My Projects</h2>
-      </div>
-    </div>
 
     <section id="my-projects">
-      <div class="project">
-        <div class="project-thumbnail">
-          <img
-            src="https://media.istockphoto.com/photos/group-of-orange-slice-in-pink-colorfruit-and-summer-concept-picture-id958522470?b=1&k=20&m=958522470&s=170667a&w=0&h=_7b_qlObxXjXaslCTHi3-Kh_63OEskD5dk0qPl5VPc4="
-          />
-        </div>
-        <div class="project-description">
-          <h3>Lorem</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem
-            facilis praesentium neque exercitationem at, fugit consectetur
-            cumque autem vitae maiores? Quas illo cumque eum fugiat doloribus
-            quisquam ducimus qui natus.
-          </p>
+      <div class="projects-section">
+        <div class="projects-subtitle">
+          <h2>My Projects</h2>
         </div>
       </div>
-      <div class="project">
-        <div class="project-thumbnail">
-          <img
-            src="https://img.freepik.com/vector-gratis/fondo-transparente-platano-ilustracion-vector-comida-linda_53876-144616.jpg"
-          />
+      <div class="projects-wrapper">
+        <div class="project">
+          <div class="project-thumbnail">
+            <img
+              src="https://media.istockphoto.com/photos/group-of-orange-slice-in-pink-colorfruit-and-summer-concept-picture-id958522470?b=1&k=20&m=958522470&s=170667a&w=0&h=_7b_qlObxXjXaslCTHi3-Kh_63OEskD5dk0qPl5VPc4="
+            />
+          </div>
+          <div class="project-description">
+            <h3>Lorem</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptatem facilis praesentium neque exercitationem at, fugit
+              consectetur cumque autem vitae maiores? Quas illo cumque eum
+              fugiat doloribus quisquam ducimus qui natus.
+            </p>
+          </div>
+          <div class="project-buttons">
+            <a href="#">Demo</a>
+            <a href="#">Github Repository</a>
+          </div>
         </div>
-        <div class="project-description">
-          <h3>Lorem</h3>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi
-            quidem quisquam iusto quam pariatur molestias quo minus blanditiis
-            et reiciendis sequi facilis repellendus iure animi minima, sunt,
-            beatae illum eaque!
-          </p>
+
+        <div class="project">
+          <div class="project-thumbnail">
+            <img
+              src="https://img.freepik.com/vector-gratis/fondo-transparente-platano-ilustracion-vector-comida-linda_53876-144616.jpg"
+            />
+          </div>
+          <div class="project-description">
+            <h3>Lorem</h3>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi
+              quidem quisquam iusto quam pariatur molestias quo minus blanditiis
+              et reiciendis sequi facilis repellendus iure animi minima, sunt,
+              beatae illum eaque mmmmmmmm!
+            </p>
+          </div>
+          <div class="project-buttons">
+            <a href="#">Demo</a>
+            <a href="#">Github Repository</a>
+          </div>
         </div>
-      </div>
-      <div class="project">
-        <div class="project-thumbnail">
-          <img src="https://cdn130.picsart.com/316366343082201.jpg" />
-        </div>
-        <div class="project-description">
-          <h3>Lorem</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi
-            obcaecati beatae exercitationem. Architecto repellendus aperiam
-            voluptas ullam odit incidunt qui quos! Quaerat, molestiae cumque.
-            Quos neque animi nisi a autem!
-          </p>
+
+        <div class="project">
+          <div class="project-thumbnail">
+            <img src="https://cdn130.picsart.com/316366343082201.jpg" />
+          </div>
+          <div class="project-description">
+            <h3>Lorem</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi
+              obcaecati beatae exercitationem. Architecto repellendus aperiam
+              voluptas ullam odit incidunt qui quos! Quaerat, molestiae cumque.
+              Quos neque animi nisi a autem!
+            </p>
+          </div>
+          <div class="project-buttons">
+            <a href="#">Demo</a>
+            <a href="#">Github Repository</a>
+          </div>
         </div>
       </div>
     </section>
@@ -193,12 +206,18 @@
 
         <div class="experience-company-info">
           <h3>Internship at Knowledgize</h3>
+          <span>
+            <i class="fa-solid fa-location-dot"></i> Playa del Carmen, Quintana
+            Roo
+          </span>
+          <span><i class="fa-solid fa-building"></i> Knowledgize</span>
           <p>12 jan to 19 july</p>
+          <span><i class="fa-solid fa-laptop-code"></i> Tools used</span>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi id
-            quae ut. Laborum, unde, voluptate rem enim blanditiis cumque eum
-            iste molestias facere expedita omnis ullam nostrum culpa doloremque
-            assumenda!
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero,
+            consequuntur cum. Suscipit, consectetur quasi laudantium fugit
+            molestiae, necessitatibus modi animi, est dignissimos quae dolor non
+            odio provident? Non, obcaecati error!
           </p>
         </div>
       </div>
