--- a/portfolio.html
+++ b/portfolio.html
@@ -33,16 +33,16 @@
               class="contact-buttom"
               href="mailto:katherine.negrete.aguilar@gmail.com? subject=subject text"
             >
-              <i class="fa-solid fa-envelope"></i>Contact me!</a
+              <i class="fa-solid fa-envelope"></i> Contact me!</a
             >
           </li>
           <li>
-            <a href="#">
+            <a href="#" target="_blank">
               <i class="fa-brands fa-github"></i>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#" target="_blank">
               <i class="fa-brands fa-linkedin"></i>
             </a>
           </li>
@@ -146,8 +146,8 @@
             </p>
           </div>
           <div class="project-buttons">
-            <a href="#">Demo</a>
-            <a href="#">Github Repository</a>
+            <a href="#" target="_blank">Demo</a>
+            <a href="#" target="_blank">Github Repository</a>
           </div>
         </div>
 
@@ -167,8 +167,8 @@
             </p>
           </div>
           <div class="project-buttons">
-            <a href="#">Demo</a>
-            <a href="#">Github Repository</a>
+            <a href="#" target="_blank">Demo</a>
+            <a href="#" target="_blank">Github Repository</a>
           </div>
         </div>
 
@@ -186,8 +186,8 @@
             </p>
           </div>
           <div class="project-buttons">
-            <a href="#">Demo</a>
-            <a href="#">Github Repository</a>
+            <a href="#" target="_blank">Demo</a>
+            <a href="#" target="_blank">Github Repository</a>
           </div>
         </div>
       </div>
@@ -207,13 +207,26 @@
 
         <div class="experience-company-info">
           <h3>Internship at Knowledgize</h3>
+          <div class="company-details">
+            <span class="company-location">
+              <i class="fa-solid fa-location-dot"></i> Playa del Carmen,
+              Quintana Roo
+            </span>
+            <span class="company-name">
+              <a href="https://www.knowledgize.com/en">
+                <i class="fa-solid fa-building"></i> Knowledgize
+              </a>
+            </span>
+          </div>
+
+          <p class="experience-date">
+            <i class="fa-solid fa-calendar-days"></i> 23 May to present 2022
+          </p>
+
           <span>
-            <i class="fa-solid fa-location-dot"></i> Playa del Carmen, Quintana
-            Roo
-          </span>
-          <span><i class="fa-solid fa-building"></i> Knowledgize</span>
-          <p>12 jan to 19 july</p>
-          <span><i class="fa-solid fa-laptop-code"></i> Tools used</span>
+            <i class="fa-solid fa-laptop-code"></i> Tools used: Git, GitHub,
+            HTML5, Vue.js</span
+          >
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero,
             consequuntur cum. Suscipit, consectetur quasi laudantium fugit
@@ -226,9 +239,11 @@
 
     <footer>
       <div>
-        <a href="#"><i class="fa-brands fa-github"></i></a>
-        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-        <a href="#"><i class="fa-solid fa-envelope-circle-check"></i></a>
+        <a href="#" target="_blank"><i class="fa-brands fa-github"></i></a>
+        <a href="#" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="#" target="_blank"
+          ><i class="fa-solid fa-envelope-circle-check"></i
+        ></a>
       </div>
       <div>
         <p>&copy Handcrafted by Katherine Negrete 2022</p>
