--- a/portfolio.html
+++ b/portfolio.html
@@ -238,15 +238,24 @@
     </section>
 
     <footer>
-      <div>
-        <a href="#" target="_blank"><i class="fa-brands fa-github"></i></a>
-        <a href="#" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-        <a href="#" target="_blank"
-          ><i class="fa-solid fa-envelope-circle-check"></i
-        ></a>
-      </div>
-      <div>
-        <p>&copy Handcrafted by Katherine Negrete 2022</p>
+      <div class="footer-contact">
+        <div>
+          <p>&copy Handcrafted by Katherine Negrete 2022</p>
+        </div>
+
+        <div>
+          <i class="fa-solid fa-earth-americas"></i>
+          <p>CDMX, México</p>
+          <i class="fa-solid fa-comment-dots"></i>
+          <p>katherine.negrete.aguilar@gmail.com</p>
+        </div>
+        <div>
+          <a href="#" target="_blank"><i class="fa-brands fa-github"></i></a>
+          <a href="#" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="#" target="_blank"
+            ><i class="fa-solid fa-envelope-circle-check"></i
+          ></a>
+        </div>
       </div>
     </footer>
 
