style(web): responsive design
Add media queries for responsive design.

--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
 
     <section id="biography">
       <div class="biography-intro-text">
-        <p>Hi, I'm Katherine!</p>
+        <span>Hi, I'm Katherine!</span>
         <h1>Front End <br />Developer</h1>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium
