--- a/portfolio.html
+++ b/portfolio.html
@@ -5,12 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" type="images/jpg" href="images/favicon.png" />
-    <script
-      src="https://kit.fontawesome.com/0e563e8096.js"
-      crossorigin="anonymous"
-    ></script>
     <link rel="stylesheet" href="main.css" />
-
     <title>Katherine's Portfolio | Front End Developer</title>
   </head>
   <body>
@@ -33,8 +28,8 @@
               class="contact-buttom"
               href="mailto:katherine.negrete.aguilar@gmail.com? subject=subject text"
             >
-              <i class="fa-solid fa-envelope"></i> Contact me!</a
-            >
+              <i class="fa-solid fa-envelope"></i> Contact me!
+            </a>
           </li>
           <li>
             <a href="#" target="_blank">
@@ -124,10 +119,8 @@
     <!-- projects section  -->
 
     <section id="my-projects">
-      <div class="projects-section">
-        <div class="projects-subtitle">
-          <h2>My Projects</h2>
-        </div>
+      <div class="projects-subtitle">
+        <h2>My Projects</h2>
       </div>
       <div class="projects-wrapper">
         <div class="project">
@@ -174,7 +167,9 @@
 
         <div class="project">
           <div class="project-thumbnail">
-            <img src="https://cdn130.picsart.com/316366343082201.jpg" />
+            <img
+              src="https://media.istockphoto.com/photos/group-of-orange-slice-in-pink-colorfruit-and-summer-concept-picture-id958522470?b=1&k=20&m=958522470&s=170667a&w=0&h=_7b_qlObxXjXaslCTHi3-Kh_63OEskD5dk0qPl5VPc4="
+            />
           </div>
           <div class="project-description">
             <h3>Lorem</h3>
@@ -260,5 +255,9 @@
     </footer>
 
     <script src="main.js"></script>
+    <script
+      src="https://kit.fontawesome.com/0e563e8096.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
