style(web): add media queries
Add media queries for responsive design.

--- a/portfolio.html
+++ b/portfolio.html
@@ -241,6 +241,8 @@
         <div>
           <i class="fa-solid fa-earth-americas"></i>
           <p>CDMX, México</p>
+        </div>
+        <div>
           <i class="fa-solid fa-comment-dots"></i>
           <p>katherine.negrete.aguilar@gmail.com</p>
         </div>
