style(web): add responsive design
Add media queries for responsive design

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
             </a>
           </li>
           <li>
-            <a href="#" target="_blank">
+            <a href="https://github.com/katherine-na" target="_blank">
               <i class="fa-brands fa-github"></i>
             </a>
           </li>
@@ -52,12 +52,10 @@
         <span>Hi, I'm Katherine!</span>
         <h1>Front End <br />Developer</h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium
-          sapiente porro aut fugit ipsam harum, nobis, culpa mollitia esse natus
-          saepe, dicta dolorem tenetur laudantium animi officiis iusto facilis
-          quisquam?
+          Hi there! I'm a UI Front End Developer, I enjoy building websites. I
+          am looking foward my first job experience.
         </p>
-        <button class="dowloand-cv">Dowloand CV</button>
+        <a href="./files/cv.pdf" class="dowloand-cv" download> Dowloand CV </a>
       </div>
 
       <div class="biography-banner">
@@ -70,12 +68,7 @@
     <section id="skills">
       <div class="skills-subtitle">
         <h2>My skills</h2>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident
-          nihil odio maiores dignissimos tempore modi commodi dolores iusto, est
-          consequuntur minima consectetur ducimus nisi. Obcaecati cumque sequi
-          similique hic optio.
-        </p>
+        <p>I am familiar with these technologies</p>
       </div>
       <div class="skills-items">
         <div class="item">
@@ -249,7 +242,8 @@
         <div>
           <a href="#" target="_blank"><i class="fa-brands fa-github"></i></a>
           <a href="#" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-          <a href="#" target="_blank"
+          <a
+            href="mailto:katherine.negrete.aguilar@gmail.com? subject=subject text"
             ><i class="fa-solid fa-envelope-circle-check"></i
           ></a>
         </div>
