content(web): button for download cv
Add cv file

--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,9 @@
           Hi there! I'm a UI Front End Developer, I enjoy building websites. I
           am looking foward my first job experience.
         </p>
-        <a href="./files/cv.pdf" class="dowloand-cv" download> Dowloand CV </a>
+        <a href="./files/kathyCV.pdf" class="dowloand-cv" download>
+          Dowloand CV
+        </a>
       </div>
 
       <div class="biography-banner">
