--- a/portfolio.html
+++ b/portfolio.html
@@ -108,6 +108,10 @@
             Design
           </p>
         </div>
+        <div class="item">
+          <img src="images/skills/sass.jpg" />
+          <p>Sass</p>
+        </div>
       </div>
     </section>
 
