style(web): add links

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,13 +15,13 @@
       <div class="navigation-bar-links">
         <ul>
           <li>
-            <a href="#">Skills</a>
+            <a href="#skills">Skills</a>
           </li>
           <li>
-            <a href="#">Projects</a>
+            <a href="#my-projects">Projects</a>
           </li>
           <li>
-            <a href="#">Experience</a>
+            <a href="#experience">Experience</a>
           </li>
           <li>
             <a
