styles(web): update project section
Add my projects with images and information about each project.

--- a/portfolio.html
+++ b/portfolio.html
@@ -124,64 +124,73 @@
       <div class="projects-wrapper">
         <div class="project">
           <div class="project-thumbnail">
-            <img
-              src="https://media.istockphoto.com/photos/group-of-orange-slice-in-pink-colorfruit-and-summer-concept-picture-id958522470?b=1&k=20&m=958522470&s=170667a&w=0&h=_7b_qlObxXjXaslCTHi3-Kh_63OEskD5dk0qPl5VPc4="
-            />
+            <img src="images/book-gallery.png" />
           </div>
           <div class="project-description">
-            <h3>Lorem</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem facilis praesentium neque exercitationem at, fugit
-              consectetur cumque autem vitae maiores? Quas illo cumque eum
-              fugiat doloribus quisquam ducimus qui natus.
-            </p>
+            <h3>Books Gallery</h3>
+            <p>Awesome book gallery with insightful reviews about</p>
           </div>
           <div class="project-buttons">
-            <a href="#" target="_blank">Demo</a>
-            <a href="#" target="_blank">Github Repository</a>
+            <a
+              href="https://katherine-na.github.io/gallery-project/"
+              target="_blank"
+              >Demo</a
+            >
+            <a
+              href="https://github.com/katherine-na/gallery-project"
+              target="_blank"
+              >Github Repository</a
+            >
           </div>
         </div>
 
         <div class="project">
           <div class="project-thumbnail">
-            <img
-              src="https://img.freepik.com/vector-gratis/fondo-transparente-platano-ilustracion-vector-comida-linda_53876-144616.jpg"
-            />
+            <img src="images/Sunshine.png" />
           </div>
           <div class="project-description">
-            <h3>Lorem</h3>
+            <h3>Sunshine</h3>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi
-              quidem quisquam iusto quam pariatur molestias quo minus blanditiis
-              et reiciendis sequi facilis repellendus iure animi minima, sunt,
-              beatae illum eaque mmmmmmmm!
+              Swimwear online shop with products displayed using images and
+              social media tags.
             </p>
           </div>
           <div class="project-buttons">
-            <a href="#" target="_blank">Demo</a>
-            <a href="#" target="_blank">Github Repository</a>
+            <a
+              href="https://katherine-na.github.io/swimsuit-shop-project/marked/index.html"
+              target="_blank"
+              >Demo</a
+            >
+            <a
+              href="https://github.com/katherine-na/swimsuit-shop-project"
+              target="_blank"
+              >Github Repository</a
+            >
           </div>
         </div>
 
         <div class="project">
           <div class="project-thumbnail">
-            <img
-              src="https://media.istockphoto.com/photos/group-of-orange-slice-in-pink-colorfruit-and-summer-concept-picture-id958522470?b=1&k=20&m=958522470&s=170667a&w=0&h=_7b_qlObxXjXaslCTHi3-Kh_63OEskD5dk0qPl5VPc4="
-            />
+            <img src="images/vegan.png" />
           </div>
           <div class="project-description">
-            <h3>Lorem</h3>
+            <h3>Vegan Tamales</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi
-              obcaecati beatae exercitationem. Architecto repellendus aperiam
-              voluptas ullam odit incidunt qui quos! Quaerat, molestiae cumque.
-              Quos neque animi nisi a autem!
+              Food cart with delicious vegan options with ingredients 100%
+              natural
             </p>
           </div>
           <div class="project-buttons">
-            <a href="#" target="_blank">Demo</a>
-            <a href="#" target="_blank">Github Repository</a>
+            <a
+              href="https://katherine-na.github.io/vegan-tamales-project/marked/index.html"
+              target="_blank"
+              >Demo</a
+            >
+            <a
+              href="https://github.com/katherine-na/vegan-tamales-project"
+              target="_blank"
+              >Github Repository</a
+            >
           </div>
         </div>
       </div>
