content(web): update "dowloand cv"

--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,11 @@
           Hi there! I'm a UI Front End Developer, I enjoy building websites. I
           am looking foward my first job experience.
         </p>
-        <a href="./files/kathyCV.pdf" class="dowloand-cv" download>
+        <a
+          href="./files/Web-UI-Katherine-Negrete-Aguilar-08-2022.pdf"
+          class="dowloand-cv"
+          download
+        >
           Dowloand CV
         </a>
       </div>
@@ -70,7 +74,11 @@
     <section id="skills">
       <div class="skills-subtitle">
         <h2>My skills</h2>
-        <p>I am familiar with these technologies</p>
+        <p>
+          I took online courses in various education platforms where I studied
+          front end technologies. I did projects using my skills and got
+          certificates.
+        </p>
       </div>
       <div class="skills-items">
         <div class="item">
