styles(web): update experience section
Add experience history section.

--- a/portfolio.html
+++ b/portfolio.html
@@ -215,7 +215,6 @@
         <div class="experience-company-logo">
           <img src="images/knoledgize.png" />
         </div>
-
         <div class="experience-company-info">
           <h3>Internship at Knowledgize</h3>
           <div class="company-details">
@@ -228,22 +227,110 @@
                 <i class="fa-solid fa-building"></i> Knowledgize
               </a>
             </span>
+            <p class="experience-date">
+              <i class="fa-solid fa-calendar-days"></i> 23 May to present 2022
+            </p>
+            <span>
+              <i class="fa-solid fa-laptop-code"></i> Tools used: Git, GitHub,
+              HTML5, Vue.js</span
+            >
+            <ul>
+              <li>Update & improve the appearance of Knowledgise web app</li>
+              <li>
+                Ensure the accurate translation of information & documentation
+              </li>
+              <li>Testing features in development</li>
+              <li>Use git & github to update branches with changes</li>
+              <li>Research user questions and answers</li>
+            </ul>
           </div>
+        </div>
+      </div>
 
-          <p class="experience-date">
-            <i class="fa-solid fa-calendar-days"></i> 23 May to present 2022
-          </p>
+      <div class="experience-item">
+        <div class="experience-company-logo">
+          <img src="images/edificio.png" />
+        </div>
+        <div class="experience-company-info">
+          <h3>Assistant to Data Scientist</h3>
+          <div class="company-details">
+            <span class="company-location">
+              <i class="fa-solid fa-location-dot"></i> Ciudad de México, México
+            </span>
+            <span class="company-name">
+              <i class="fa-solid fa-building"></i> Admin Assistant
+            </span>
+            <p class="experience-date">
+              <i class="fa-solid fa-calendar-days"></i> Jul 2020 to Apr 2022
+            </p>
+            <span>
+              <i class="fa-solid fa-laptop-code"></i> Tools used: Git, GitHub,
+              HTML5, Vue.js</span
+            >
+            <ul>
+              <li>
+                Help with editing image files, data extraction, documentation
+              </li>
+              <li>
+                Labeling data, screenshots, data entry, testing, moving files,
+                compression, copying, backups
+              </li>
+              <li>Zoom, Google Suite (Slides, Sheets, Docs, Meet, Drive)</li>
+              <li>Research details of projects</li>
+              <li>Slack, Microsoft Office (Word, Powerpoint, Excel, Teams)</li>
+              <li>Mac OS</li>
+            </ul>
+          </div>
+        </div>
+      </div>
 
-          <span>
-            <i class="fa-solid fa-laptop-code"></i> Tools used: Git, GitHub,
-            HTML5, Vue.js</span
-          >
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero,
-            consequuntur cum. Suscipit, consectetur quasi laudantium fugit
-            molestiae, necessitatibus modi animi, est dignissimos quae dolor non
-            odio provident? Non, obcaecati error!
-          </p>
+      <div class="experience-item">
+        <div class="experience-company-logo">
+          <img src="images/chel.png" />
+        </div>
+        <div class="experience-company-info">
+          <h3>Waitress</h3>
+          <div class="company-details">
+            <span class="company-location">
+              <i class="fa-solid fa-location-dot"></i> Ciudad de México, México
+            </span>
+            <span class="company-name">
+              <i class="fa-solid fa-building"></i> Che Lindo
+            </span>
+            <p class="experience-date">
+              <i class="fa-solid fa-calendar-days"></i> Sep 2021 to Mar 2022
+            </p>
+            <ul>
+              <li>
+                Work in teams under pressure, memorize menu, customer service,
+                good communication, attention to detail
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="experience-item">
+        <div class="experience-company-logo">
+          <img src="images/liverpool.png" />
+        </div>
+        <div class="experience-company-info">
+          <h3>Sales Clerk</h3>
+          <div class="company-details">
+            <span class="company-location">
+              <i class="fa-solid fa-location-dot"></i> Ciudad de México, México
+            </span>
+            <span class="company-name">
+              <i class="fa-solid fa-building"></i> Liverpool
+            </span>
+            <p class="experience-date">
+              <i class="fa-solid fa-calendar-days"></i> Sep 2019 - Mar 2020
+            </p>
+            <ul>
+              <li>Work in team, customer service, inventory merchandize</li>
+              <li>Cash management & promotions</li>
+            </ul>
+          </div>
         </div>
       </div>
     </section>
