content(web): add education section
Add education and certificate section with information and images.
Add images to directory.

--- a/portfolio.html
+++ b/portfolio.html
@@ -335,6 +335,60 @@
       </div>
     </section>
 
+    <section id="education">
+      <div class="education-items">
+        <div class="education-subtitle">
+          <h2>Education</h2>
+        </div>
+        <div class="education-coursera">
+          <div class="education-info">
+            <h3>coursera</h3>
+            <span>Jan 2022</span>
+            <p>
+              Activities and societies: Intensive course covering modern web
+              development practice on front-end.
+            </p>
+          </div>
+          <div class="education-img">
+            <img src="images/coursera.png" />
+          </div>
+        </div>
+        <div class="education-colbach">
+          <div class="education-info">
+            <h3>Colegio de Bachilleres</h3>
+            <span>Jan 2022</span>
+            <p>
+              Activities and societies: Intensive course covering modern web
+              development practice on front-end.
+            </p>
+          </div>
+          <div class="education-img">
+            <img src="images/colbach.jpg" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="certificate">
+      <div class="certificate-subtitle">
+        <h2>Certifications</h2>
+      </div>
+      <div class="certificate-wrap">
+        <div class="certificate-item">
+          <div class="certificate-html">
+            <img src="images/cert-html.png" />
+            <h3>Introduction to HTML5</h3>
+          </div>
+        </div>
+        <div class="certificate-item">
+          <div class="certificate-css">
+            <img src="images/cert-css.png" />
+            <h3>Introduction to CSS3</h3>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <footer>
       <div class="footer-contact">
         <div>
