styles(web): fixing some styles

--- a/portfolio.html
+++ b/portfolio.html
@@ -342,7 +342,7 @@
         </div>
         <div class="education-coursera">
           <div class="education-info">
-            <h3>coursera</h3>
+            <h3>Coursera</h3>
             <span>Jan 2022</span>
             <p>
               Activities and societies: Intensive course covering modern web
@@ -377,13 +377,21 @@
         <div class="certificate-item">
           <div class="certificate-html">
             <img src="images/cert-html.png" />
-            <h3>Introduction to HTML5</h3>
+            <a
+              href="https://coursera.org/share/3b7c5fd9527c351ecd70967edf5f0ed9"
+              target="_blank"
+              >Introduction to HTML5</a
+            >
           </div>
         </div>
         <div class="certificate-item">
           <div class="certificate-css">
             <img src="images/cert-css.png" />
-            <h3>Introduction to CSS3</h3>
+            <a
+              href="https://coursera.org/share/143dc48c9849d98c8b9404ad336c9925"
+              target="_blank"
+              >Introduction to CSS3</a
+            >
           </div>
         </div>
       </div>
