styles(web): add responsive design
Add media queries for responsive design in each section

--- a/portfolio.html
+++ b/portfolio.html
@@ -399,15 +399,15 @@
 
     <footer>
       <div class="footer-contact">
-        <div>
+        <div class="copyright">
           <p>&copy Handcrafted by Katherine Negrete 2022</p>
         </div>
 
-        <div>
+        <div class="location">
           <i class="fa-solid fa-earth-americas"></i>
           <p>CDMX, México</p>
         </div>
-        <div>
+        <div class="email">
           <i class="fa-solid fa-comment-dots"></i>
           <p>katherine.negrete.aguilar@gmail.com</p>
         </div>
