styles(web): add open graph meta

--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="/images/favicon.png" />
     <link rel="stylesheet" href="main.css" />
-    <title>Katherine's Portfolio | Front End Developer</title>
+    <title>Katherine's Portfolio | Front-End Developer</title>
+    <!--  open graph meta -->
+    <meta
+      property="og:title"
+      content="Katherine's Portfolio | Front-End Developer"
+    />
+    <meta
+      property="og:url"
+      content="https://katherine-na.github.io/katherine-portfolio/portfolio"
+    />
+    <meta property="og:image" content="images/myPortfolio.png" />
+    <meta property="og:site_name" content="Katherine's Portfolio" />
   </head>
   <body>
     <!-- my nav  -->
